--- a/package.json
+++ b/package.json
@@ -1,30 +1,23 @@
 {
-  "name": "Module19",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "webpack": "webpack --watch",
-    "build": "webpack"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/zoomzooom6/food-festival.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/zoomzooom6/food-festival/issues"
-  },
-  "homepage": "https://github.com/zoomzooom6/food-festival#readme",
-  "devDependencies": {
-    "webpack": "^5.50.0",
-    "webpack-cli": "^4.8.0"
-  },
-  "dependencies": {
-    "@popperjs/core": "^2.9.3",
-    "bootstrap": "^5.1.0",
-    "jquery": "^3.6.0"
-  }
+    "name": "module-18-project",
+    "version": "1.0.0",
+    "description": "",
+    "main": "assets/js/script.js",
+    "scripts": {
+        "webpack": "webpack --watch",
+        "build": "webpack",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "webpack": "^4.43.0",
+        "webpack-cli": "^3.3.11"
+    },
+    "dependencies": {
+        "bootstrap": "^4.3.1",
+        "jquery": "^3.4.1",
+        "popper.js": "^1.16.0"
+    }
 }
