--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "module-18-project",
+    "name": "module-19",
     "version": "1.0.0",
     "description": "",
     "main": "assets/js/script.js",
