--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "webpack": "webpack --watch",
         "build": "webpack",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start:dev" : "webpack-dev-server"
     },
     "keywords": [],
     "author": "",
@@ -15,7 +16,8 @@
         "file-loader": "^6.2.0",
         "webpack": "^4.43.0",
         "webpack-bundle-analyzer": "^4.4.2",
-        "webpack-cli": "^3.3.11"
+        "webpack-cli": "^3.3.11",
+        "webpack-dev-server": "^3.11.2"
     },
     "dependencies": {
         "bootstrap": "^4.3.1",
