--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "webpack": "webpack --watch",
         "build": "webpack",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start:dev" : "webpack-dev-server"
+        "start:dev": "webpack-dev-server"
     },
     "keywords": [],
     "author": "",
@@ -17,7 +17,8 @@
         "webpack": "^4.43.0",
         "webpack-bundle-analyzer": "^4.4.2",
         "webpack-cli": "^3.3.11",
-        "webpack-dev-server": "^3.11.2"
+        "webpack-dev-server": "^3.11.2",
+        "webpack-pwa-manifest": "^4.3.0"
     },
     "dependencies": {
         "bootstrap": "^4.3.1",
